[gd_scene load_steps=3 format=3 uid="uid://cg63vonsdcpbm"]

[ext_resource type="Script" uid="uid://cxaps8oibx2ud" path="res://Scripts/Enemy/Enemy D/redEnemyD.gd" id="1_6urqu"]
[ext_resource type="Texture2D" uid="uid://7qjiqvfxlknr" path="res://Assets/Sprites/kenney_space-shooter-redux/PNG/Ships/playerShip2_red.png" id="2_18wn3"]

[node name="RedEnemyD" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 16
collision_mask = 2
motion_mode = 1
script = ExtResource("1_6urqu")

[node name="RedSprite" type="Sprite2D" parent="."]
texture_filter = 1
rotation = 3.14159
texture = ExtResource("2_18wn3")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
rotation = 3.14159
polygon = PackedVector2Array(-4, -36.1, -4, -31.9, -9, -20.9, -9, -19.4, -16, -13.4, -16, -12.8, -47, 3.3, -53.2, 3.5, -54.4, 5.6, -39, 30.1, -39, 32.9, -19, 29.2, -16.2, 29.5, -15.1, 29.5, -13, 33, -13, 35.5, 12, 35.5, 17.3, 28.9, 32.8, 32.5, 38.1, 32.5, 52.2, 9.5, 53.6, 9.5, 54.3, 6.4, 15.5, -13.5, 14.1, -13.5, 4, -30.2, 4, -34.1)

[node name="Collision" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collision"]
rotation = 3.14159
polygon = PackedVector2Array(-4, -36.1, -4, -31.9, -9, -20.9, -9, -19.4, -16, -13.4, -16, -12.8, -47, 3.3, -53.2, 3.5, -54.4, 5.6, -39, 30.1, -39, 32.9, -19, 29.2, -16.2, 29.5, -15.1, 29.5, -13, 33, -13, 35.5, 12, 35.5, 17.3, 28.9, 32.8, 32.5, 38.1, 32.5, 52.2, 9.5, 53.6, 9.5, 54.3, 6.4, 15.5, -13.5, 14.1, -13.5, 4, -30.2, 4, -34.1)

[node name="SpawnPos" type="Marker2D" parent="."]
position = Vector2(0, 34)

[node name="FireSpeed" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rotation = -3.14159
scale = Vector2(8, 6.57499)
rect = Rect2(-10, -10, 20, 21.85)

[connection signal="body_entered" from="Collision" to="." method="_on_collision_body_entered"]
[connection signal="timeout" from="FireSpeed" to="." method="_on_fire_speed_timeout"]
